# swarm-lingustics

./: README
argos3-kilobot-master/: local_experiment.sh  test.txt
argos3-kilobot-master/src/: CMakeLists.txt
argos3-kilobot-master/src/language/behaviors/: CMakeLists.txt  NG_agg.c  config.h
argos3-language/: CMakeLists.txt
argos3-language/controllers/: CMakeLists.txt
argos3-language/controllers/footbot_aggregation/: CMakeLists.txt  footbot_aggregation.cpp  footbot_aggregation.h
argos3-language/controllers/footbot_aggregation_NG/: CMakeLists.txt  footbot_aggregation_NG.cpp  footbot_aggregation_NG.h
argos3-language/controllers/footbot_aggregation_cNG/: CMakeLists.txt  footbot_aggregation_cNG.cpp  footbot_aggregation_cNG.h
argos3-language/controllers/footbot_aggregation_nNG/: CMakeLists.txt  footbot_aggregation_nNG.cpp  footbot_aggregation_nNG.h
argos3-language/controllers/footbot_aggregation_sNG/: CMakeLists.txt  footbot_aggregation_sNG.cpp  footbot_aggregation_sNG.h
argos3-language/controllers/footbot_aggregation_wNG/: CMakeLists.txt  footbot_aggregation_wNG.cpp  footbot_aggregation_wNG.h
argos3-language/controllers/footbot_pace/: CMakeLists.txt  footbot_pace.cpp  footbot_pace.h
argos3-language/controllers/footbot_stopNG/: CMakeLists.txt  footbot_stopNG.cpp  footbot_stopNG.h
argos3-language/experiments/: aggregation.argos  aggregation_EE.argos  aggregation_NG.argos  aggregation_NG_s100_a1_p14.argos  aggregation_NG_s100_a1_p17.argos  aggregation_NG_s100_a1_p20.argos  aggregation_NG_s100_a2_p14.argos  aggregation_NG_s100_a2_p17.argos  aggregation_NG_s100_a2_p20.argos  aggregation_NG_s20_a1_p14.argos  experiment.sh  (+13 more)
conceptual_model/: end_plots.py  force_table.py  irace_boxplot.py  perf.py  stats.py  test.py  word_evol.py  word_histo.py  word_map.py  word_scatter.py
lua/: multitopic_naming_game.lua  naming_game.argos  naming_game.lua
lua/cpp/: CMakeLists.txt  language_game.h  word_qtuser_functions.h
src/: aggregation.argos  aggregation.lua  aggregation_no_NG.argos  aggregation_no_NG.lua  discrimination_game.argos  discrimination_game.lua  multitopic_naming_game.argos  multitopic_naming_game.lua  naming_game.argos  naming_game.lua  room.argos
(+75 files in other folders)
